apps/car-rental/base/api-gateway/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: api-gateway
  labels:
    app: api-gateway
spec:
  to:
    kind: Service
    name: api-gateway
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
